ASUSFETest/src/objects/Academic_Interest__c.object
<CustomObject>
    <description>General interests from GRE, Hobsons, NNE, California Diversity</description>
    <fields>
        <fullName>Academic_Interest_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRE_Code__c</fullName>
        <externalId>true</externalId>
        <label>GRE Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Code__c</fullName>
        <description>Abbreviated code for academic interest name</description>
        <label>Interest Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Academic Interest</label>
    <listViews>
        <fullName>All_Academic_Interests</fullName>
        <columns>NAME</columns>
        <columns>GRE_Code__c</columns>
        <columns>Interest_Code__c</columns>
        <columns>Academic_Interest_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Academic Interests</label>
    </listViews>
    <listViews>
        <fullName>Health_Academic_Interests</fullName>
        <columns>NAME</columns>
        <columns>GRE_Code__c</columns>
        <columns>Interest_Code__c</columns>
        <columns>Academic_Interest_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>health</value>
        </filters>
        <label>Health Academic Interests</label>
        <sharedTo/>
    </listViews>
    <nameField>
        <label>Academic Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Interests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>